# MirrorMe

./: .gitignore  README.md  pyproject.toml  启动MirrorMe.bat
docs/: dogfood-validation.md  ime-compliance-manifest.json  input-method-research.md  roadmap.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: analysis-workspace.tsx  diary-workspace.tsx  featured-mirrorme-section.tsx  mvp-showcase.tsx  weekly-review-workspace.tsx
frontend/src/components/ui/: card.tsx
mirrorme/: __init__.py  cli.py  composition.py  ime.py  ime_bridge.py  ime_capture.py  ime_compliance.py  ime_sidecar.py  llm_cleaner.py  llm_diary.py  llm_observer.py  observation_quality.py  redaction.py  store.py  summary.py  text_workbench.py  web.py
mirrorme/web_static/: app.js  index.html  state.css  state.html  state.js  style.css
scripts/: install-system-ime.ps1  setup-librime-sidecar.ps1  verify-librime-sidecar.ps1
sidecars/librime-json-stdio/: CMakeLists.txt  README.md
sidecars/librime-json-stdio/src/: main.cpp
system-ime/rime/: default.custom.yaml  mirrorme_pinyin.dict.yaml  mirrorme_pinyin.schema.yaml
system-ime/rime/lua/: mirrorme_capture.lua
tests/: test_cli.py  test_ime.py  test_ime_bridge.py  test_ime_compliance.py  test_ime_sidecar.py  test_launcher.py  test_llm_cleaner.py  test_llm_observer.py  test_observation_quality.py  test_redaction.py  test_sidecar_skeleton.py  test_store.py  test_system_ime.py  test_text_workbench.py  test_web.py
